# imgscope

./: .gitignore  pyproject.toml
examples/: decode_demo.py
src/imgscope/: __init__.py
src/imgscope.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/imgscope/cli/: __init__.py  main.py
src/imgscope/core/: __init__.py  exceptions.py  image.py
src/imgscope/decoders/: __init__.py  bmp.py  png.py
src/imgscope/forensics/: __init__.py  integrity.py
src/imgscope/utils/: __init__.py  binary.py
tests/: test_bmp.py  test_png.py
